--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <title>CV</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <div class="wrapper">
+        <header class="header">
+            <div class="container">
+                <nav class="header__nav">
+                    <ul class="header__nav-list">
+                        <li class="header__nav-item"><a href="#" class="header__nav-link">About</a></li>
+                        <li class="header__nav-item"><a href="#" class="header__nav-link">Contacts</a></li>
+                        <li class="header__nav-item"><a href="#" class="header__nav-link">Courses</a></li>
+                        <li class="header__nav-item"><a href="#" class="header__nav-link">Skills</a></li>
+                        <li class="header__nav-item"><a href="#" class="header__nav-link">Code</a></li>
+                        <li class="header__nav-item"><a href="#" class="header__nav-link">Languages</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+    </div>
 </body>
 </html>
