feat: add photo and description

--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
                 </nav>
             </div>
         </header>
+        <main class="main">
+            <section class="section-about">
+                <div class="container">
+                    <div class="section-about__main">
+                        <p class="section-about__description">I am 21 years old, I worked with application and website design, but decided to switch to frontend. That is why I`m here. My goal is to gain knowledge in the field of front-end development.</p>
+                        <div class="section-about__background">
+                            <img class="section-about__background-img" src="img/main-photo.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
     </div>
 </body>
 </html>
