feat: add section-contacts

--- a/index.html
+++ b/index.html
@@ -34,7 +34,20 @@
                     </div>
                 </div>
             </section>
+            <section class="section-contacts">
+                <div class="container section-contacts__container">
+                    <div class="section-contacts__content">
+                        <div class="section-contacts__content-about">
+                            <h1 class="section-contacts__heading">Hi, i'm <br> Egor Muhaev</h1>
+                            <strong class="section-contacts__job heading">Junior Front-end Developer</strong>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
+        <footer class="footer">
+
+        </footer>
     </div>
 </body>
 </html>
