--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="container">
                 <nav class="header__nav">
                     <ul class="header__nav-list">
-                        <li class="header__nav-item"><a href="#" class="header__nav-link">About</a></li>
+                        <li class="header__nav-item"><a href="#about" class="header__nav-link">About</a></li>
                         <li class="header__nav-item"><a href="#" class="header__nav-link">Contacts</a></li>
                         <li class="header__nav-item"><a href="#" class="header__nav-link">Courses</a></li>
                         <li class="header__nav-item"><a href="#" class="header__nav-link">Skills</a></li>
@@ -24,7 +24,7 @@
             </div>
         </header>
         <main class="main">
-            <section class="section-about">
+            <section id="about" class="section-about">
                 <div class="container">
                     <div class="section-about__main">
                         <p class="section-about__description">I am 21 years old, I worked with application and website design, but decided to switch to frontend. That is why I`m here. My goal is to gain knowledge in the field of front-end development.</p>
@@ -39,7 +39,19 @@
                     <div class="section-contacts__content">
                         <div class="section-contacts__content-about">
                             <h1 class="section-contacts__heading">Hi, i'm <br> Egor Muhaev</h1>
-                            <strong class="section-contacts__job heading">Junior Front-end Developer</strong>
+                            <h2 class="section-contacts__job heading">Junior Front-end Developer</h2>
+                        </div>
+                        <div class="section-contacts__contact">
+                            <ul class="section-contacts__list">
+                                <li class="section-contacts__item"><a href="#" class="section-contacts__link">+7 962-989-55-15</a></li>
+                                <li class="section-contacts__item"><a href="#" class="section-contacts__link">jumpeebunee@gmail.com</a></li>
+                                <li class="section-contacts__item"><a href="#" class="section-contacts__link">https://github.com/jumpeebunee</a></li>
+                            </ul>
+                            <div class="section-contacts__social">
+                                <a href="#" class="section-contacts__social-link"><svg class="section-contacts__social-link-icon" width="30" height="30" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M12 0C5.37 0 0 5.37 0 12C0 17.31 3.435 21.795 8.205 23.385C8.805 23.49 9.03 23.13 9.03 22.815C9.03 22.53 9.015 21.585 9.015 20.58C6 21.135 5.22 19.845 4.98 19.17C4.845 18.825 4.26 17.76 3.75 17.475C3.33 17.25 2.73 16.695 3.735 16.68C4.68 16.665 5.355 17.55 5.58 17.91C6.66 19.725 8.385 19.215 9.075 18.9C9.18 18.12 9.495 17.595 9.84 17.295C7.17 16.995 4.38 15.96 4.38 11.37C4.38 10.065 4.845 8.985 5.61 8.145C5.49 7.845 5.07 6.615 5.73 4.965C5.73 4.965 6.735 4.65 9.03 6.195C9.99 5.925 11.01 5.79 12.03 5.79C13.05 5.79 14.07 5.925 15.03 6.195C17.325 4.635 18.33 4.965 18.33 4.965C18.99 6.615 18.57 7.845 18.45 8.145C19.215 8.985 19.68 10.05 19.68 11.37C19.68 15.975 16.875 16.995 14.205 17.295C14.64 17.67 15.015 18.39 15.015 19.515C15.015 21.12 15 22.41 15 22.815C15 23.13 15.225 23.505 15.825 23.385C18.2072 22.5807 20.2772 21.0497 21.7437 19.0074C23.2101 16.965 23.9993 14.5143 24 12C24 5.37 18.63 0 12 0Z" fill="#CC3931"/></svg></a>
+                                <a href="#" class="section-contacts__social-link"><svg class="section-contacts__social-link-icon" width="30" height="30" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g clip-path="url(#clip0_50_32)"><path fill-rule="evenodd" clip-rule="evenodd" d="M23.45 5.948C23.616 5.402 23.45 5 22.655 5H20.03C19.362 5 19.054 5.347 18.887 5.73C18.887 5.73 17.552 8.926 15.661 11.002C15.049 11.604 14.771 11.795 14.437 11.795C14.27 11.795 14.019 11.604 14.019 11.057V5.948C14.019 5.292 13.835 5 13.279 5H9.151C8.734 5 8.483 5.304 8.483 5.593C8.483 6.214 9.429 6.358 9.526 8.106V11.904C9.526 12.737 9.373 12.888 9.039 12.888C8.149 12.888 5.984 9.677 4.699 6.003C4.45 5.288 4.198 5 3.527 5H0.9C0.15 5 0 5.347 0 5.73C0 6.412 0.89 9.8 4.145 14.281C6.315 17.341 9.37 19 12.153 19C13.822 19 14.028 18.632 14.028 17.997V15.684C14.028 14.947 14.186 14.8 14.715 14.8C15.105 14.8 15.772 14.992 17.33 16.467C19.11 18.216 19.403 19 20.405 19H23.03C23.78 19 24.156 18.632 23.94 17.904C23.702 17.18 22.852 16.129 21.725 14.882C21.113 14.172 20.195 13.407 19.916 13.024C19.527 12.533 19.638 12.314 19.916 11.877C19.916 11.877 23.116 7.451 23.449 5.948H23.45Z" fill="#CC3931"/></g><defs><clippath id="clip0_50_32"><rect width="24" height="24" fill="white"/></clippath></defs></svg></a>
+                                <a href="#" class="section-contacts__social-link"><svg class="section-contacts__social-link-icon" width="30" height="30" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"> <path fill-rule="evenodd" clip-rule="evenodd" d="M24 12C24 18.627 18.627 24 12 24C5.373 24 0 18.627 0 12C0 5.373 5.373 0 12 0C18.627 0 24 5.373 24 12ZM12.43 8.859C11.263 9.344 8.93 10.349 5.432 11.873C4.864 12.099 4.566 12.32 4.539 12.536C4.493 12.902 4.951 13.046 5.573 13.241C5.658 13.268 5.746 13.295 5.836 13.325C6.449 13.524 7.273 13.757 7.701 13.766C8.09 13.774 8.524 13.614 9.003 13.286C12.271 11.079 13.958 9.964 14.064 9.94C14.139 9.923 14.243 9.901 14.313 9.964C14.383 10.026 14.376 10.144 14.369 10.176C14.323 10.369 12.529 12.038 11.599 12.902C11.309 13.171 11.104 13.362 11.062 13.406C10.968 13.503 10.872 13.596 10.78 13.685C10.21 14.233 9.784 14.645 10.804 15.317C11.294 15.64 11.686 15.907 12.077 16.173C12.504 16.464 12.93 16.754 13.482 17.116C13.622 17.208 13.756 17.303 13.887 17.396C14.384 17.751 14.831 18.069 15.383 18.019C15.703 17.989 16.035 17.688 16.203 16.789C16.6 14.663 17.382 10.059 17.563 8.161C17.574 8.00341 17.5673 7.84509 17.543 7.689C17.5285 7.56293 17.4671 7.44693 17.371 7.364C17.228 7.247 17.006 7.222 16.906 7.224C16.455 7.232 15.763 7.473 12.43 8.859Z" fill="#CC3931"/> </svg> </a>
+                            </div>
                         </div>
                     </div>
                 </div>
