feat: add main-sections

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div class="section-contacts__content">
                         <div class="section-contacts__content-about">
                             <h1 class="section-contacts__heading">Hi, i'm <br> Egor Muhaev</h1>
-                            <h2 class="section-contacts__job heading">Junior Front-end Developer</h2>
+                            <h2 class="section-contacts__job section-heading">Junior Front-end Developer</h2>
                         </div>
                         <div class="section-contacts__contact">
                             <ul class="section-contacts__list">
@@ -56,6 +56,45 @@
                     </div>
                 </div>
             </section>
+            <div class="container main-container">
+                <section class="section-main section-education section-main__left">
+                    <h2 class="section-main__heading section-heading">Education & COURSES</h2>
+                    <ul class="section-education__list">
+                        <li class="section-education__item section-item">2017 - 2021  Yakhrom College Network and System Administration</li>
+                        <li class="section-education__item section-item">FreeCodeCamp</li>
+                        <li class="section-education__item section-item">Learn JavaScript</li>
+                        <li class="section-education__item section-item">RS Schools Course (in progress)</li>
+                    </ul>
+                </section>
+                <section class="section-main section-skills section-main__right">
+                    <h2 class="section-main__heading section-heading">SKILLS</h2>
+                    <ul class="section-education__list">
+                        <li class="section-education__item section-item">HTML5, CSS3</li>
+                        <li class="section-education__item section-item">CSS (Boostrap, BEM)</li>
+                        <li class="section-education__item section-item">JavaScript Basics</li>
+                        <li class="section-education__item section-item">Git/GitHub</li>
+                        <li class="section-education__item section-item">Adobe Photoshope, Illustrator, Figma</li>
+                    </ul>
+                </section>
+                <section class="section-main section-education section-main__left">
+                    <h2 class="section-main__heading section-heading">CODE EXAMPLE</h2>
+                    <pre class="pre"><code>function reverse() {  
+    let stringUser = prompt('Enter the word: ');
+    let stringUserReverse = [];
+    for (let i = stringUser.length - 1; i >= 0; i--){
+        stringUserReverse.push(stringUser[i]);
+    }
+    console.log(stringUserReverse.join(''));
+}</code></pre>  
+                </section>
+                <section class="section-main section-skills section-main__right">
+                    <h2 class="section-main__heading section-heading">LANGUAGES</h2>
+                    <ul class="section-education__list">
+                        <li class="section-education__item section-item">English - A2</li>
+                        <li class="section-education__item section-item">Russian - Native</li>
+                    </ul>
+                </section>
+            </div>
         </main>
         <footer class="footer">
 
