fix: fix warning

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
             <section id="about" class="section-about">
                 <div class="container">
                     <div class="section-about__main">
-                        <p class="section-about__description">I am 21 years old, I worked with application and website design, but decided to switch to frontend. That is why I`m here. My goal is to gain knowledge in the field of front-end development.</p>
+                        <div class="section-about__info">
+                            <h2 class="section-about__heading heading">ABOUT ME</h2>
+                            <p class="section-about__description">I am 21 years old, I worked with application and website design, but decided to switch to frontend. That is why I`m here. My goal is to gain knowledge in the field of front-end development.</p>
+                        </div>
                         <div class="section-about__background">
                             <img class="section-about__background-img" src="img/main-photo.png" alt="My epic photo">
                         </div>
