--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/fav.svg">
+    <link type="image/x-icon" href="img/favicon.ico" rel="shortcut icon">
+    <link type="image/x-icon" href="img/favicon.ico" rel="icon">
     <link rel="stylesheet" href="style.css">
     <title>Egor Muhaev CV</title>
 </head>
