fix: rename and fix link

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="image/x-icon" href="img/favicon.ico" rel="shortcut icon">
     <link type="image/x-icon" href="img/favicon.ico" rel="icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Egor Muhaev CV</title>
 </head>
 <body>
@@ -49,7 +49,7 @@
                         </div>
                         <div class="section-contacts__contact">
                             <ul class="section-contacts__list">
-                                <li class="section-contacts__item"><a href="tel:+79629895515" class="section-contacts__link">+7 962-989-55-15</a></li>
+                                <li class="section-contacts__item"><a href="https://discordapp.com/users/970332448070193192/" class="section-contacts__link">jumpeebunee#9337</a></li>
                                 <li class="section-contacts__item"><a href="mailto:jumpeebunee@gmail.com" class="section-contacts__link">jumpeebunee@gmail.com</a></li>
                                 <li class="section-contacts__item"><a href="https://github.com/jumpeebunee" class="section-contacts__link">https://github.com/jumpeebunee</a></li>
                             </ul>
